Fixed alignment

--- a/index.css
+++ b/index.css
@@ -57,9 +57,9 @@ a {
   width: fit-content;
 }
 
-@media (min-width: 500px) {
+@media (max-width: 500px) {
   .buy-btn {
-    margin-left: 0;
+    margin: 0;
   }
 }
 
